# ProjectRigCage

./: Cargo.toml
assets/data/: monster-hard.json
assets/data/Intro/: introtext.txt
assets/images/: BOYFRIEND.xml  alphabet.xml  cool.xml
assets/playstate/index-hard/: README.txt  index-hard.json
src/: main.rs
src/Conductor/: mod.rs
src/GamePlugin/: GameStates.rs  mod.rs
src/GamePlugin/Core/: mod.rs
src/GamePlugin/Core/SpriteXML/: mod.rs
src/GamePlugin/Gameplay/: mod.rs  systems.rs
src/GamePlugin/Gameplay/Conductor/: mod.rs
src/GamePlugin/Menus/: mod.rs
src/GamePlugin/Menus/Intro/: mod.rs  systems.rs
src/GamePlugin/Menus/Letters/: mod.rs
src/GamePlugin/Menus/Title/: mod.rs  systems.rs
src/GamePlugin/PreLoader/: mod.rs
src/Song/: mod.rs
