[package]
name = "ProjectRigCage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
dev = ["bevy/bevy_dylib"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher", "bevy/tonemapping_luts", "bevy/wayland"]

[dependencies]
bevy = {version = "^0.10", default-features = false}
bevy_kira_audio = "^0.15"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
bevy_asset_loader = "^0.16"
bevy-inspector-egui = "0.18.3"
bevy_tweening = "0.7.0"
serde-xml-rs = "0.6.0"
bevy_framepace = "^0.12"
bevy_sprite3d = {git = "https://github.com/rayanmargham/bevy_sprite3d"}
rand = "0.8.5"